force-app/main/default/objects/NGenius_Setting__mdt/fields/API_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>API_Named_Credential__c</fullName>
    <label>API Named Credential</label>
    <type>Text</type>
    <length>100</length>
    <description
  >Named Credential for the invoice endpoint. Default NGenius_API.</description>
</CustomField>