force-app/main/default/objects/NGenius_Setting__mdt/fields/Default_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency_Code__c</fullName>
    <label>Default Currency Code</label>
    <type>Text</type>
    <length>3</length>
    <description>ISO code preselected on the form. Default AED.</description>
</CustomField>