force-app/main/default/objects/NGenius_Setting__mdt/fields/Default_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Expiry_Days__c</fullName>
    <label>Default Expiry Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Form default for link expiry, e.g. 3.</description>
</CustomField>