force-app/main/default/objects/NGenius_Setting__mdt/fields/Email_Subject_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject_Prefix__c</fullName>
    <label>Email Subject Prefix</label>
    <type>Text</type>
    <length>100</length>
    <description>Prefix for the email subject the payer receives.</description>
</CustomField>