force-app/main/default/objects/NGenius_Setting__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Text</type>
    <length>20</length>
    <description
  >Sandbox or Production. Guarded by NGeniusConfig.assertEnvironmentSane so a refreshed sandbox cannot silently issue live links.</description>
</CustomField>