force-app/main/default/objects/NGenius_Setting__mdt/fields/Identity_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Identity_Named_Credential__c</fullName>
    <label>Identity Named Credential</label>
    <type>Text</type>
    <length>100</length>
    <description
  >Named Credential for the token endpoint. Default NGenius_Identity.</description>
</CustomField>