force-app/main/default/objects/NGenius_Setting__mdt/fields/Log_API_Payloads__c.field-meta.xml
<CustomField>
    <fullName>Log_API_Payloads__c</fullName>
    <label>Log API Payloads</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >When on, redacted request/response bodies are stored in Payment_Link__c.API_Log__c.</description>
</CustomField>