force-app/main/default/objects/NGenius_Setting__mdt/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <label>Maximum Amount</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
    <description
  >Maximum amount (major units) a payment link may be raised for. 0 or blank disables the rule (a 50,000,000 sanity cap still applies). Business wants 55,000 (2026-08-21).</description>
</CustomField>