force-app/main/default/objects/NGenius_Setting__mdt/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <label>Minimum Amount</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
    <description
  >Minimum amount (major units) a payment link may be raised for. 0 or blank disables the rule. Business wants 10,000 — temporarily 0 while testing (2026-08-20).</description>
</CustomField>