force-app/main/default/objects/NGenius_Setting__mdt/fields/Outlet_Reference__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Reference__c</fullName>
    <label>Outlet Reference</label>
    <required>true</required>
    <type>Text</type>
    <length>64</length>
    <description
  >Outlet ID from Network International. Ship with the REPLACE_WITH_OUTLET_REFERENCE placeholder until the real value is configured.</description>
</CustomField>