force-app/main/default/objects/NGenius_Setting__mdt/fields/Payment_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Payment_Attempts__c</fullName>
    <label>Payment Attempts</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description
  >Payer retries on failure. N-Genius allows up to 5; clamped to 1-5 in Apex.</description>
</CustomField>