force-app/main/default/objects/NGenius_Setting__mdt/fields/Realm_Name__c.field-meta.xml
<CustomField>
    <fullName>Realm_Name__c</fullName>
    <label>Realm Name</label>
    <required>true</required>
    <type>Text</type>
    <length>64</length>
    <description
  >ni for sandbox, networkinternational for production.</description>
</CustomField>