force-app/main/default/objects/NGenius_Setting__mdt/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <label>Redirect URL</label>
    <type>Url</type>
    <description
  >Optional thank-you page the payer lands on after paying. Omitted from the payload when blank.</description>
</CustomField>