force-app/main/default/objects/NGenius_Setting__mdt/fields/Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS__c</fullName>
    <label>Send SMS</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >When on, a supplied mobile number is sent to N-Genius so the payer also gets an SMS. Requires the "pay by link via SMS" feature to be ENABLED on the outlet — with it disabled N-Genius rejects the whole invoice with HTTP 422 (invoiceFeatureDisabled). Off = mobiles are stored in Salesforce only.</description>
</CustomField>