force-app/main/default/objects/NGenius_Setting__mdt/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Text</type>
    <length>20</length>
    <description
  >PURCHASE sells and captures in one step; AUTH authorises for later capture. Default PURCHASE.</description>
</CustomField>